2008-03-26  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-internal.lisp (select-next/previous-level): Don't use show-all-children 
	-> less flickering.

2008-03-25  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-info.lisp (keys-from-list): new function.

	* src/*: rename 'childs' in 'children'.

	* src/*: rename 'group' in 'frame'.

2008-03-22  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-pack.lisp (explode-group/explode-current-group): new functions.

2008-03-21  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-pack.lisp: Pack, Fill, Resize functions.

2008-03-16  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-nw-hooks.lisp: Register system for new window hooks.
	Bind control+o to open the next window in a new group in the root group 
	 (as open in next window in a new workspace in 0801 version).

2008-03-15  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-util.lisp (show/hide-all-groups-info/key): Show/hide all groups info 
	window.

2008-03-14  Philippe Brochard  <hocwp@free.fr>

	* bindings-second-mode.lisp ("ISO_Left_Tab"): Use ISO_Left_Tab
	instead of Tab for select-previous-child.

2008-03-13  Philippe Brochard  <hocwp@free.fr>

	* clfswm-util.lisp (force-window-in-group/force-window-center-in-group):
	new functions.

2008-03-11  Philippe Brochard  <hocwp@free.fr>

	* clfswm-util.lisp (identify-key): Display the documentation
	associated to keys when identifying a key.

2008-03-10  Xavier Maillard  <xma@gnu.org>

	* contrib/clfswm: Complete rewrite of the script. Detect error and
	act accordingly. Add command line arguments to configure the
	script execution. User can now choose different common lisp
	implementation (clisp and sbcl only), choose where to store the
	dumped image, where to find clfswm source.

2008-03-09  Philippe Brochard  <hocwp@free.fr>

	* clfswm-internal.lisp (process-new-window): Beginning of new
	window hook: each group have a hook to tell what he wants to do
	with the new created window.
